 ~ Flattened the distribution curve of star and planet types.
 ~ Increased cost of troop pods to make conquest less casual.
 ~ Made monsters nests last on average twice as long.
 ~ Halved the generation of floaters from forests.
 ~ Colony and Outpost bases (for in-system use only) can be built without shipyards.
 ~ Greatly weakend the Sentry and Sentinel

Content:
 ~ Fixed many spelling errors in various descriptions.
 ~ Updated many inaccurate descriptions.
 ~ Tweaked ShipDesign encyclopedia entries to show total cost instead of per-turn cost, to be consistent with buildings.
 ~ Translation updates, particularly Russian and French.
 
 ~ Species:
 ~ ~ All species now have different aptitudes at resource production, ground combat & so on.  A few have special stealth and detection abilities.
 ~ ~ ~ Sorry, currently very un-balanced.
 ~ ~ 5 classes of species: Organic, Lithic, Robotic, Phototrophic, and Self-Sustaining. Population in each flourishes for different reasons. More differences planned.
 ~ ~ All Homeworlds now provide a population bonus, and for some species, can be set to 'Growth' to provide population bonuses for colonies of the same species
 ~ ~ Added Phototrophic species pick, which increases population with brighter suns.
 ~ ~ Added Exobots, a constructable robot species.
 ~ ~ Changed roster of playable species.
 ~ ~ Acirema native colonies now occasionally produce ships, and have better defenses.
 ~ ~ Additional minor species.
 
 ~ Monsters:
 ~ ~ Greatly increased the strength of monsters.
 ~ ~ Added Experimentor outpost which produces dangerous monsters later in the game.
 ~ ~ ~ These monsters may be overpowered for the time being.
 ~ ~ ~ Destroying/capturing this outpost is a victory condition.
 ~ ~ New Asteroid Snail space monster
 ~ ~ Added Nova Bomb and biological weaponry
 
 ~ Specials:
 ~ ~ Adding 3 new growth Special Resources each for Organic, Lithic, & Robotic species.
 ~ ~ Abandoned Colony special now works.