@@ -1,7 +1,7 @@
 #include "../util/Version.h"
 
 namespace {
-    static const std::string retval = "v0.4+ [SVN 4857] Xcode 3";
+    static const std::string retval = "v0.4.1 [SVN 5079] Xcode 3";
 }
 
 const std::string& FreeOrionVersionString()
